--- a/tp1/html/produit.html
+++ b/tp1/html/produit.html
@@ -1,76 +1,82 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>LEGO Webstore</title>
-        <link rel="stylesheet" href="../css/styles.css">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <title>LEGO Webstore</title>
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
+
 <body>
-    <section id="haut"></section>
-    <h1>LEGO WebStore</h1>
+    <div class="container">
+        <section id="haut"></section>
+        <h1>LEGO WebStore</h1>
 
-    <hr>
-    <ul>
-        <li><a href="produit.html" target="_blank">produit</a></li>
-        <li><a href="acheter.html" target="_blank">Acheter</a></li>
-    </ul>
+        <hr style="height: 1px; background-color: black;">
+        <ul>
+            <li><a href="produit.html" target="_blank">Produit</a></li>
+            <li><a href="acheter.html" target="_blank">Acheter</a></li>
+        </ul>
 
-    <hr>
+        <hr style="height: 0,5px; background-color: black;">
 
-    <h2>LEGO Architecture - New York </h2>
-    Célébrez <a href="">New York</a> avec ce modèle LEGO Architecture Skyline !
-    <img src="../img/produit_newyork_1.jpeg" alt=""> <br>
-    Aperçu de la construction
+        <h2>LEGO Architecture - New York </h2>
+        Célébrez <a href="">New York</a> avec ce modèle LEGO Architecture Skyline !
+        <img src="../img/produit_newyork_1.jpeg" alt=""> <br>
+        Aperçu de la construction
 
-    <h3>Description du produit </h3>
+        <h2>Description du produit </h2>
 
-    <p> Fêtez la diversité architecturale de New York avec ce modèle détaillé en briques
-    LEGO. La collection LEGO Architecture Skyline offre des modèles adaptés à
-    l'exposition à la maison et au bureau, et a été développée pour toutes les
-    personnes qui s'intéressent au voyage, à la création, à l'histoire et à
-    l'architecture.</p>
-    <p> Chaque ensemble a une échelle adaptée pour donner une idée précise de la taille
-    comparative de chaque structure, avec une représentation en couleurs réalistes.
-    Cet ensemble comprend le Flatiron Building, le Chrysler Building, l'Empire State
-    Building, le One World Trade Center et la Statue de la Liberté, et un écriteau
-    décoratif “New York”.</p>
+        <p> Fêtez la diversité architecturale de New York avec ce modèle détaillé en briques
+            LEGO. La collection LEGO Architecture Skyline offre des modèles adaptés à
+            l'exposition à la maison et au bureau, et a été développée pour toutes les
+            personnes qui s'intéressent au voyage, à la création, à l'histoire et à
+            l'architecture.</p>
+        <p> Chaque ensemble a une échelle adaptée pour donner une idée précise de la taille
+            comparative de chaque structure, avec une représentation en couleurs réalistes.
+            Cet ensemble comprend le Flatiron Building, le Chrysler Building, l'Empire State
+            Building, le One World Trade Center et la Statue de la Liberté, et un écriteau
+            décoratif “New York”.</p>
 
-    <h3>Spécificités</h3>
-    <ul>
-        <li>Interprétation LEGO du paysage de New York.</li>
-        <li>Comprend le Flatiron Building, le Chrysler Building, l'Empire State Building, le One World Trade Center et la Statue de la Liberté.</li>
-        <li>Inclut une plaque de base 4x32 avec un écriteau décoratif "New York".</li>
-        <li>Recréez les plus belles villes du monde avec la collection LEGO Architecture Skyline.</li>
-        <li>Mesure 26 cm de haut, 25 cm de large et 4 cm de profondeur. Source: Site officiel LEGO</li>
-    </ul>
- 
-    Source: <a href="https://lego.com" target="_blank">Site Officiel lego</a>
-    <h3>Caracteristiques</h3>
+        <h2>Spécificités</h2>
+        <ul>
+            <li>Interprétation LEGO du paysage de New York.</li>
+            <li>Comprend le Flatiron Building, le Chrysler Building, l'Empire State Building, le One World Trade Center
+                et la Statue de la Liberté.</li>
+            <li>Inclut une plaque de base 4x32 avec un écriteau décoratif "New York".</li>
+            <li>Recréez les plus belles villes du monde avec la collection LEGO Architecture Skyline.</li>
+            <li>Mesure 26 cm de haut, 25 cm de large et 4 cm de profondeur. Source: Site officiel LEGO</li>
+        </ul>
 
-    <table>
-        <tr>
-            <th>Id. produit</th>
-            <th colspan="2">Age</th>
-            <th>Nombre de pieces</th>
-            <th>Prix</th>
-        </tr>
-        <tr>
-            <td rowspan="2">21028</td>
-            <td>mini</td>
-            <td>maxi</td>
-            <td rowspan="2">598 pieces</td>
-            <td rowspan="2">49.99</td>
-        </tr>
-        <tr>
-            <td>12 ans</td>
-            <td>99 ans</td>
-        </tr>
-    </table>
-    <hr>
-    <a href="#haut">Haut de la page</a>
+        Source: <a href="https://lego.com" target="_blank">Site Officiel lego</a>
+        <h2>Caracteristiques</h2>
 
-    <p>TP1 : Decouverte de HTML et CSS <br>
-    L2 Developpement Web - 2018</p>
+        <table>
+            <tr>
+                <th>Id. produit</th>
+                <th colspan="2">Age</th>
+                <th>Nombre de pieces</th>
+                <th>Prix</th>
+            </tr>
+            <tr>
+                <td rowspan="2">21028</td>
+                <td>mini</td>
+                <td>maxi</td>
+                <td rowspan="2">598 pieces</td>
+                <td rowspan="2">49.99</td>
+            </tr>
+            <tr>
+                <td>12 ans</td>
+                <td>99 ans</td>
+            </tr>
+        </table>
+        <hr style="height: 0,5px; background-color: black;">
+        <a href="#haut">Haut de la page</a>
+
+        <p>TP1 : Decouverte de HTML et CSS <br>
+            L2 Developpement Web - 2018</p>
 
 </body>
+</div>
+
 </html>
